--- a/res/layout/dialpad_key.xml
+++ b/res/layout/dialpad_key.xml
@@ -29,7 +29,21 @@
             style="@style/DialpadKeyNumberStyle" />
 
         <TextView
-            android:id="@+id/dialpad_key_letters"
+            android:id="@+id/dialpad_key_labels"
             style="@style/DialpadKeyLettersStyle" />
+
+        <LinearLayout
+            style="@style/DialpadKeyLetterLayoutStyle">
+
+            <TextView
+                android:id="@+id/dialpad_key2_letters"
+                style="@style/DialpadKeyLettersStyle" />
+
+            <TextView
+                android:id="@+id/dialpad_key_letters"
+                style="@style/DialpadKeyLettersStyle" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </com.android.phone.common.dialpad.DialpadKeyButton>
